--- a/.github/workflows/runner-info.yml
+++ b/.github/workflows/runner-info.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on:
       - ubuntu-latest
 
+    concurrency:
+      group: ${{ github.action }}
+      cancel-in-progress: true
+
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v3
