--- a/.github/workflows/matrix-include.yml
+++ b/.github/workflows/matrix-include.yml
@@ -20,6 +20,7 @@ jobs:
 
     name: '${{ matrix.name }}'
     runs-on: '${{ matrix.runner }}'
+    timeout-minutes: 5
 
     steps:
       - uses: actions/checkout@v3
