--- a/.github/workflows/gh.yml
+++ b/.github/workflows/gh.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           gh auth status
-          curl -sSf --head -H "authorization: token $GH_TOKEN" https://api.github.com | grep -i x-oauth-scopes:
+          curl -sSf --head -H "authorization: token $GH_TOKEN" https://api.github.com
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
