--- a/.github/workflows/gh.yml
+++ b/.github/workflows/gh.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          gh auth status
-          curl -sS -H "authorization: token $GH_TOKEN" https://api.github.com/user
+          DEBUG=api gh auth status
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
