use @actions/core

--- a/.github/workflows/summaries.yml
+++ b/.github/workflows/summaries.yml
@@ -26,10 +26,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
+      - name: Setup script environments
+        run: |
+          npm ci
       - name: Run a shell script
         run: |
-          echo >> "## Hello, world! :rocket:" >> $GITHUB_STEP_SUMMARY
-          echo >> "" > $GITHUB_STEP_SUMMARY
-          echo >> "This is the result of a job running on ${{ matrix.runner }}." >> $GITHUB_STEP_SUMMARY
+          tools/summaries.ts
 
