The env command cannot run `npx ts-node` on Linux

--- a/.github/workflows/summaries.yml
+++ b/.github/workflows/summaries.yml
@@ -31,5 +31,5 @@ jobs:
           npm ci
       - name: Run a shell script
         run: |
-          tools/summaries.ts
+          npx ts-node tools/summaries.ts
 
